src/style.css
@charset "utf-8";
/* CSS Document */

/*REGARDING THE CONTENT OF THE PAGE*/
body {
  margin-top: 50px;
  margin-bottom: 85px;
  background-color: #ffffff;
  background-position: top center;
  background-repeat: no-repeat;
}

h1 {
  font-family: 'Space Mono', Mono;
  color: #000000;
  font-weight: 800;
  font-size: 38pt;
  line-height: 42pt;
  text-align: left;
  padding-top: 30px;
  padding-bottom: 15px;
}

h2 {
  font-family: 'Space Mono', Mono;
  color: #000000;
  font-weight: 400;
  font-size: 28pt;
  line-height: 28pt;
  float: left;
  vertical-align: bottom;
}

h3 {
  font-family: 'Space Mono', Mono;
  color: #000000;
  font-weight: 400;
  font-size: 28pt;
  line-height: 28pt;
  float: right;
  vertical-align: bottom;
}

h4 {
  font-family: 'Space Mono', Mono;
  color: #000000;
  font-weight: 800;
  font-size: 12pt;
  line-height: 18pt;
  text-align: left;
}

h5 {
  font-family: 'Space Mono', Mono;
  color: #000000;
  font-weight: 800;
  font-size: 24pt;
  line-height: 30pt;
  text-align: left;
  margin-top: 40px;
  margin-bottom: 20px;
}

h6 {
  font-family: 'Space Mono', Mono;
  color: #000000;
  font-weight: 800;
  font-size: 12pt;
  line-height: 18pt;
  text-align: left;
}

p {
  font-family: 'IBM Plex Sans', Sans-Serif;
  color: #000000;
  font-weight: 400;
  font-size: 12pt;
  line-height: 18pt;
  text-align: left;
}

strong {
  font-weight: 600;
}

a {color: #000000; text-decoration: none; transition: 0.3s}
a:active {color: #ffc600; text-decoration: none;}
a:hover {color: #ffc600; text-decoration: none; transition: 0.3s}

.rightSideText {
  padding-left: 20px;
}

.nLeft {
  width: 250px;
  padding: 0px;
  display: inline-block;
}

.wLeft {
  width: 675px;
  padding: 0px;
  display: inline-block;
}

.wRight {
  padding-top: 0px;
  padding-bottom: 0px;
  padding-right: 0px;
  padding-left: 20px;
  width: 526px;
  display: inline-block;
  vertical-align: top;
}

.nRight {
  padding-top: 0px;
  padding-bottom: 0px;
  padding-right: 0px;
  padding-left: 20px;
  width: 101px;
  display: inline-block;
  vertical-align: top;
}

.halves {
  padding-top: 0px;
  padding-bottom: 0px;
  padding-right: 20px;
  padding-right: 0px;
  width: 49%;
  display: inline-block;
  vertical-align: top;
}

.rowSpacer {
  padding-bottom: 50px;
}

.inGrid {
  display: inline;
}

.pTop {
  padding-top: 10px;
}

.pBottom {
  padding-bottom: 10px;
}

.pRight {
  padding-right: 10px;
  display: inline-block;
}

.pLeft {
  padding-left: 10px;
  display: inline-block;
}

#tags {
  font-family: 'IBM Plex Sans', Sans-Serif;
  color: #000000;
  font-weight: 600;
  font-size: 12pt;
  line-height: 18pt;
  text-align: left;
  white-space: pre-wrap;
}

#YearSection {
  /*white-space: nowrap;*/
}

#YearTag {
  font-family: 'IBM Plex Sans', Sans-Serif;
  font-weight: 400;
  font-size: 12pt;
  line-height: 18pt;
  text-align: left;
  white-space: nowrap;
}

#YearTag a {
  background-color: #fc532d;
  color: #ffffff;
}

#YearTag a:hover {
  background-color: transparent;
  color: #fc532d;
}

#CourseSection {
  /*white-space: nowrap;*/
}

#CourseTag {
  font-family: 'IBM Plex Sans', Sans-Serif;
  font-weight: 400;
  font-size: 12pt;
  line-height: 18pt;
  text-align: left;
  white-space: nowrap;
}

#CourseTag a {
  background-color: #ff8402;
  color: #ffffff;
}

#CourseTag a:hover {
  background-color: transparent;
  color: #ff8402;
}

#CompanySection {
  /*white-space: nowrap;*/
}

#CompanyTag {
  font-family: 'IBM Plex Sans', Sans-Serif;
  font-weight: 400;
  font-size: 12pt;
  line-height: 18pt;
  text-align: left;
  white-space: nowrap;
}

#CompanyTag a {
  background-color: #a955fc;
  color: #ffffff;
}

#CompanyTag a:hover {
  background-color: transparent;
  color: #a955fc;
}

#PeopleSection {
  /*white-space: nowrap;*/
}

#PeopleTag {
  font-family: 'IBM Plex Sans', Sans-Serif;
  font-weight: 400;
  font-size: 12pt;
  line-height: 18pt;
  text-align: left;
  white-space: nowrap;
}

#PeopleTag a {
  background-color: #828282;
  color: #ffffff;
}

#PeopleTag a:hover {
  background-color: transparent;
  color: #828282;
}
  
#SkillsSection {
  /*white-space: nowrap;*/
}

#SkillsTag {
  font-family: 'IBM Plex Sans', Sans-Serif;
  font-weight: 400;
  font-size: 12pt;
  line-height: 18pt;
  text-align: left;
  white-space: nowrap;
}

#SkillsTag a {
  background-color: #11a0ff;
  color: #ffffff;
}

#SkillsTag a:hover {
  background-color: transparent;
  color: #11a0ff;
}

#CategoriesSection {
  /*white-space: nowrap;*/
}

#CategoriesTag {
  font-family: 'IBM Plex Sans', Sans-Serif;
  font-weight: 400;
  font-size: 12pt;
  line-height: 18pt;
  text-align: left;
  white-space: nowrap;
}

#CategoriesTag a {
  background-color: #04db85;
  color: #ffffff;
}

#CategoriesTag a:hover {
  background-color: transparent;
  color: #04db85;
}

/*REGARDING THE TOP BAR*/
#topBar {
  background-color: #ffffff;
  border-bottom-style: solid;
  border-bottom-color: #000000;
  border-bottom-width: 3px;
  padding-top: 15px;
  padding-bottom: 13px;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

/*REGARDING THE SIDE NAV*/
.sidenav {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 2;
  top: 0;
  right: 0;
  background-color: #ffc600;
  overflow-x: hidden;
  transition: 0.3s;
  padding-top: 60px;
  font-family: "Space Mono", Mono;
  font-weight: 900;
}

.sidenav a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #000000;
  display: block;
  transition: 0.3s;
}

.sidenav a:hover {
  color: #ffffff;
}

.link a:hover {
  color: #000000;
  background-color: #ffffff;
  outline-style: solid;
  outline-color: #000000;
  outline-width: 3px;
}

.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

#main {
  transition: margin-right .3s;
  padding: 16px;
}

@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

/*REGARDING THE SOCIAL BAR*/
.fa {
  padding: 9px 25px 9px 9px;
  font-size: 18px;
  width: 18px;
  text-align: center;
  text-decoration: none;
  margin: 0px -2px;
  background-color: #ffffff;
  color: #000000;
}

.fa:hover {
  background-color: #ffc600;
  color: #000000;
}

.icon-bar {
  margin: auto;
  width: 168px;
}

/*REGARDING IMAGE LINKS*/
.spacer {
  padding-bottom: 30px;
}

.left {
  padding-left: 0px;
}

.right {
  padding-right: 0px;
}

.top {
  padding-top: 10px;
}

.bottom {
  padding-bottom: 10px;
}

.imgContainer {
  position: relative;
  z-index: 0;
}

.linkImage {
  display: block;
  width: 388px;
  height: 388px;
}

.imgOverlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .3s ease;
  background-color: #ffc600;
  outline-style: solid;
  outline-color: #000000;
  outline-width: 3px;
}

.imgContainer:hover .imgOverlay {
  opacity: 1;
}

.imgText {
  color: #000000;
  font-family: "Space Mono", Mono;
  font-size: 25pt;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

